--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="Web site created using create-react-app"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <title>T0n0yan's Star</title>
+    <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta content="Web site created using create-react-app" name="description"/>
+    <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
+    <title>T0n0yan's Portfolio</title>
 </head>
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root">
-
-    <a target="_blank" href="https://icons8.com/icon/f7hiyiAbABne/blue-pointer"></a>
-    <a target="_blank" href="https://icons8.com"></a>
+    <a href="https://icons8.com/icon/f7hiyiAbABne/blue-pointer" target="_blank"></a>
+    <a href="https://icons8.com" target="_blank"></a>
 </div>
-
 </body>
 </html>
